0192de4f-2202-7118-be72-8fc88738fdd3

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,6 +46,22 @@
                         <i class="fas fa-table"></i>
                         <span>Table</span>
                     </div>
+                    <div class="element" draggable="true" data-type="social-icons">
+                        <i class="fas fa-share-alt"></i>
+                        <span>Social Icons</span>
+                    </div>
+                    <div class="element" draggable="true" data-type="map">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <span>Map</span>
+                    </div>
+                    <div class="element" draggable="true" data-type="countdown">
+                        <i class="fas fa-hourglass-half"></i>
+                        <span>Countdown</span>
+                    </div>
+                    <div class="element" draggable="true" data-type="pricing-table">
+                        <i class="fas fa-dollar-sign"></i>
+                        <span>Pricing Table</span>
+                    </div>
                 </div>
             </div>
             <div class="sidebar-section">
@@ -62,27 +78,6 @@
                     <div class="element" draggable="true" data-type="grid">
                         <i class="fas fa-th"></i>
                         <span>Grid</span>
-                    </div>
-                </div>
-            </div>
-            <div class="sidebar-section">
-                <h3 class="sidebar-title">Components</h3>
-                <div class="element-grid">
-                    <div class="element" draggable="true" data-type="navbar">
-                        <i class="fas fa-bars"></i>
-                        <span>Navbar</span>
-                    </div>
-                    <div class="element" draggable="true" data-type="footer">
-                        <i class="fas fa-shoe-prints"></i>
-                        <span>Footer</span>
-                    </div>
-                    <div class="element" draggable="true" data-type="card">
-                        <i class="fas fa-credit-card"></i>
-                        <span>Card</span>
-                    </div>
-                    <div class="element" draggable="true" data-type="carousel">
-                        <i class="fas fa-images"></i>
-                        <span>Carousel</span>
                     </div>
                 </div>
             </div>
