--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,6 +62,22 @@
                         <i class="fas fa-dollar-sign"></i>
                         <span>Pricing Table</span>
                     </div>
+                    <div class="element" draggable="true" data-type="carousel">
+                        <i class="fas fa-images"></i>
+                        <span>Carousel</span>
+                    </div>
+                    <div class="element" draggable="true" data-type="accordion">
+                        <i class="fas fa-bars"></i>
+                        <span>Accordion</span>
+                    </div>
+                    <div class="element" draggable="true" data-type="tabs">
+                        <i class="fas fa-folder"></i>
+                        <span>Tabs</span>
+                    </div>
+                    <div class="element" draggable="true" data-type="testimonial">
+                        <i class="fas fa-quote-right"></i>
+                        <span>Testimonial</span>
+                    </div>
                 </div>
             </div>
             <div class="sidebar-section">
@@ -78,6 +94,14 @@
                     <div class="element" draggable="true" data-type="grid">
                         <i class="fas fa-th"></i>
                         <span>Grid</span>
+                    </div>
+                    <div class="element" draggable="true" data-type="flexbox">
+                        <i class="fas fa-vector-square"></i>
+                        <span>Flexbox</span>
+                    </div>
+                    <div class="element" draggable="true" data-type="columns">
+                        <i class="fas fa-columns"></i>
+                        <span>Columns</span>
                     </div>
                 </div>
             </div>
@@ -96,7 +120,6 @@
                     <button class="button button-secondary" onclick="toggleGrid()"><i class="fas fa-th"></i> Toggle Grid</button>
                     <button class="button button-primary" onclick="saveDesign()"><i class="fas fa-save"></i> Save</button>
                     <button class="button button-secondary" onclick="previewDesign()"><i class="fas fa-eye"></i> Preview</button>
-                    <button class="button button-primary" onclick="publishDesign()"><i class="fas fa-upload"></i> Publish</button>
                 </div>
             </div>
             <div id="canvas-container">
