0192de74-1f5e-7118-be75-141ca5401de7

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,6 +94,22 @@
                         <i class="fas fa-credit-card"></i>
                         <span>Card</span>
                     </div>
+                    <div class="element" draggable="true" data-type="timeline">
+                        <i class="fas fa-stream"></i>
+                        <span>Timeline</span>
+                    </div>
+                    <div class="element" draggable="true" data-type="gallery">
+                        <i class="fas fa-images"></i>
+                        <span>Gallery</span>
+                    </div>
+                    <div class="element" draggable="true" data-type="faq">
+                        <i class="fas fa-question-circle"></i>
+                        <span>FAQ</span>
+                    </div>
+                    <div class="element" draggable="true" data-type="cta">
+                        <i class="fas fa-bullhorn"></i>
+                        <span>Call to Action</span>
+                    </div>
                 </div>
             </div>
             <div class="sidebar-section">
