--- a/frontend/index.html
+++ b/frontend/index.html
@@ -110,6 +110,26 @@
                         <i class="fas fa-bullhorn"></i>
                         <span>Call to Action</span>
                     </div>
+                    <div class="element" draggable="true" data-type="audio">
+                        <i class="fas fa-music"></i>
+                        <span>Audio Player</span>
+                    </div>
+                    <div class="element" draggable="true" data-type="slider">
+                        <i class="fas fa-sliders-h"></i>
+                        <span>Slider</span>
+                    </div>
+                    <div class="element" draggable="true" data-type="rating">
+                        <i class="fas fa-star"></i>
+                        <span>Rating</span>
+                    </div>
+                    <div class="element" draggable="true" data-type="chart">
+                        <i class="fas fa-chart-bar"></i>
+                        <span>Chart</span>
+                    </div>
+                    <div class="element" draggable="true" data-type="countdown-timer">
+                        <i class="fas fa-stopwatch"></i>
+                        <span>Countdown Timer</span>
+                    </div>
                 </div>
             </div>
             <div class="sidebar-section">
